--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -12,10 +12,24 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+} */
+
+:root {
+  --color-background: #0b5ed7;
+  --color-text: #949494;
+  --color-primary: #0b5ed7;
+  --color-secondary: #ffffff;
+
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: var(--color-text);
+  background: var(--color-background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.card-form {
+  background-color: #ffffff;
+  padding: 30px;
+  border-radius: 10px;
 }
