--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,3 +33,16 @@ body {
   padding: 30px;
   border-radius: 10px;
 }
+
+.btn-floating {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+}
